CSS headings spacing fixes

--- a/components/com_resources/assets/css/resources.css
+++ b/components/com_resources/assets/css/resources.css
@@ -55,7 +55,7 @@
 		display: block;
 		position: absolute;
 		left: 0;
-		top: 0.8em;
+		top: 1em;
 		width: 1.6em;
 		height: 1.6em;
 		font-size: 1.6em;
@@ -72,7 +72,6 @@
 	}
 	.com_resources .four .columns div {
 		padding-left: 2em;
-		padding-top: 1em;
 	}
 	.extracontent .topicpage:before,
 	.extracontent .wiki:before,
