--- a/templates/hubbasic2012/css/main.css
+++ b/templates/hubbasic2012/css/main.css
@@ -130,7 +130,7 @@
 		font-weight: 600;
 		font-weight: normal;
 		color: #484848;
-		margin: 0 0 1em 0;
+		margin: 1em 0;
 	}
 	#droppables h1,
 	#droppables h2,
